fixed spacing

--- a/apps/gym/src/components/isolated/Weight/WeighChart/WeightChartMobile/WeightChartMobile.module.css
+++ b/apps/gym/src/components/isolated/Weight/WeighChart/WeightChartMobile/WeightChartMobile.module.css
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: 16px;
 }
 
 .button_container {
   display: flex;
+  gap: 8px;
 }
 
 @media (width > 480px) {
